--- a/GitHubStatus/Info.plist
+++ b/GitHubStatus/Info.plist
@@ -33,6 +33,10 @@
 			<string>tom.io.appshortcut.status</string>
 		</dict>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
